bk_ida/gccida/g1/nonmemory_operand
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/nonmemory_operand/src/recog.c:1669:33: error: must use 'enum' tag to refer to type 'machine_mode'
int  nonmemory_operand( rtx op, machine_mode mode) 
                                ^
                                enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/nonmemory_operand/src/recog.c:1691:8: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( mode_class_0[mode] & 0xFFFFFFFD) != 1 ) 
       ^~~~~~~~~~~~
       mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/nonmemory_operand/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/nonmemory_operand/src/obj/recog.o] Error 1
